Fixes issue input field jogging on safari

--- a/app/assets/stylesheets/layout_components/forms.scss
+++ b/app/assets/stylesheets/layout_components/forms.scss
@@ -446,6 +446,14 @@ input[type="url"]:-ms-input-placeholder{
         margin-bottom: $base-margin;
       }
     }
+
+    /* Prevents jogging of an input's placeholder text due to safari's form autofill. */
+    & input{
+      height: auto;
+    }
+    & select{
+      height: auto;
+    }
   }
 
   &__error-wrapper{
